--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@ h2{
     color: forestgreen;
     background-color: aquamarine; 
 }
+h3{
+    color: forestgreen;
+    background-color: aquamarine; 
+}
